# cpsCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: clion_style.xml
include/cpsCore/: cps_object
include/cpsCore/Aggregation/: AggregatableObject.hpp  AggregatableObjectMaster.hpp  Aggregator.h  IAggregatableObject.h  MultiObjectHandle.hpp  ObjectHandleContainer.hpp  TypeTraits.hpp
include/cpsCore/Aggregation/DynamicContainer/: DynamicObjectContainer.h
include/cpsCore/Aggregation/StaticContainer/: StaticObjectContainer.h
include/cpsCore/Configuration/: ConfigurableObject.hpp  Configuration.hpp  EmptyConfiguration.h  GlobalConfiguration.hpp  JsonPopulator.h  Parameter.hpp  ParameterRef.hpp  PropertyMapper.h  PropertyMapper.hpp  TerminalConfigurator.h  TypeTraits.hpp
include/cpsCore/Framework/: Factory.h  FrameworkExceptions.h  Helper.h  PluginHelper.h  PluginManager.h  PluginRestriction.h  StaticFactory.h  StaticHelper.h  TypeTraits.hpp
include/cpsCore/Framework/api/: FrameworkAPI.h
include/cpsCore/Logging/: CPSLogger.h
include/cpsCore/Synchronization/: AggregatableRunner.h  IRunnableObject.h  SimpleRunner.h  SynchronizedRunnerMaster.h
include/cpsCore/Utilities/: Angle.hpp  EnumMap.hpp  Filtering.hpp  LinearAlgebra.h  LockTypes.hpp  NamedValue.hpp  Optional.hpp  Packet.h  Time.hpp  TypeTraits.hpp
include/cpsCore/Utilities/DataPresentation/: BinarySerialization.hpp  DataPresentation.h  hamming74.h
include/cpsCore/Utilities/DataPresentation/detail/: ArchiveOptions.h  BasicSerialization.h  BasicSerializationImpl.hpp  Split.h
include/cpsCore/Utilities/DataPresentation/detail/Binary/: BinaryFromArchive.h  BinaryFromArchiveImpl.hpp  BinaryToArchive.h  BinaryToArchiveImpl.hpp
include/cpsCore/Utilities/DataPresentation/detail/File/: FileFromArchive.h  FileFromArchiveImpl.hpp  FileToArchive.h  FileToArchiveImpl.hpp
include/cpsCore/Utilities/IDC/: IDC.h  IDCSender.h
include/cpsCore/Utilities/IDC/Header/: Hash.h  HashingHeader.h  NetworkHeader.h  TransportHeader.h
include/cpsCore/Utilities/IDC/NetworkLayer/: INetworkLayer.h  NetworkFactory.h  NetworkStats.h
include/cpsCore/Utilities/IDC/NetworkLayer/Redis/: RedisChannelParams.h  RedisNetworkLayer.h  RedisNetworkLayerParams.h  RedisPublisher.h  RedisSubscriber.h
include/cpsCore/Utilities/IDC/NetworkLayer/Serial/: SerialHandler.h  SerialHandlerParams.h  SerialNetworkLayer.h  SerialNetworkLayerParams.h  SerialNetworkParams.h
include/cpsCore/Utilities/IDC/TransportLayer/: ITransportLayer.h
include/cpsCore/Utilities/IPC/: IPC.h  IPCOptions.h  IPCParams.h  Publisher.h  Subscription.h
include/cpsCore/Utilities/IPC/detail/: IPublisherImpl.h  ISubscriptionImpl.h  MessageObject.h  MessageQueuePublisherImpl.h  MessageQueueSubscriptionImpl.h  SharedMemoryPublisherImpl.h  SharedMemorySubscriptionImpl.h
include/cpsCore/Utilities/Scheduler/: Event.h  EventBody.h  ExternalSimulator.h  IScheduler.h  MicroSimulator.h  MicroSimulatorParams.h  MultiThreadingScheduler.h  MultiThreadingSchedulerParams.h  SchedulerFactory.h
include/cpsCore/Utilities/Scheduler/ThreadPool/: Task.h  ThreadPoolScheduler.h
include/cpsCore/Utilities/SignalHandler/: SignalHandler.h
include/cpsCore/Utilities/Test/: TestInfo.h  TestRunner.hpp
include/cpsCore/Utilities/TimeProvider/: ITimeProvider.h  SystemTimeProvider.h  TimeProviderFactory.h
src/: CMakeLists.txt
src/Aggregation/: Aggregator.cpp  CMakeLists.txt  SignalHandler.cpp
src/Aggregation/DynamicContainer/: DynamicObjectContainer.cpp
src/Configuration/: CMakeLists.txt  Configuration.cpp  JsonPopulator.cpp  PropertyMapper.cpp  TerminalConfigurator.cpp
src/Framework/: CMakeLists.txt  Helper.cpp  PluginHelper.cpp  PluginManager.cpp
src/Framework/api/: FrameworkAPI.cpp
src/Logging/: CMakeLists.txt  CPSLogger.cpp
src/Synchronization/: AggregatableRunner.cpp  CMakeLists.txt  SimpleRunner.cpp  SynchronizedRunner.cpp  SynchronizedRunnerMaster.cpp
src/Utilities/: CMakeLists.txt  LinearAlgebra.cpp  Packet.cpp
src/Utilities/DataPresentation/: hamming74.cpp
src/Utilities/DataPresentation/detail/: BasicSerialization.cpp
src/Utilities/DataPresentation/detail/Binary/: BinaryFromArchive.cpp  BinaryToArchive.cpp
src/Utilities/DataPresentation/detail/File/: FileFromArchive.cpp  FileToArchive.cpp
src/Utilities/IDC/: IDC.cpp  IDCSender.cpp
src/Utilities/IDC/NetworkLayer/Redis/: RedisChannelParams.cpp  RedisNetworkLayer.cpp  RedisPublisher.cpp  RedisSubscriber.cpp
src/Utilities/IDC/NetworkLayer/Serial/: SerialHandler.cpp  SerialNetworkLayer.cpp  SerialNetworkParams.cpp
src/Utilities/IPC/: IPC.cpp  Subscription.cpp
src/Utilities/IPC/detail/: MessageQueuePublisherImpl.cpp  MessageQueueSubscriptionImpl.cpp  SharedMemoryPublisherImpl.cpp  SharedMemorySubscriptionImpl.cpp
src/Utilities/Scheduler/: Event.cpp  EventBody.cpp  ExternalSimulator.cpp  MicroSimulator.cpp  MultiThreadingScheduler.cpp
src/Utilities/Scheduler/ThreadPool/: ThreadPoolScheduler.cpp
src/Utilities/SignalHandler/: SignalHandler.cpp
src/Utilities/Test/: TestInfo.cpp
src/Utilities/TimeProvider/: SystemTimeProvider.cpp
tests/: CMakeLists.txt  TestInfo.cpp  TestRunner.cpp
tests/Aggregation/: AggregatableObjectTest.cpp  AggregatorTest.cpp  CMakeLists.txt  TypeHandling.cpp  TypeHandlingTest.cpp
tests/Configuration/: CMakeLists.txt  ConfigurableObjectTest.cpp  JsonPopulatorTest.cpp  PropertyMapperTest.cpp
tests/Framework/: CMakeLists.txt  FrameworkAPITest.cpp  StaticFactoryTests.cpp  StaticHelperTests.cpp
tests/Logging/: CMakeLists.txt  CPSLoggerTest.cpp
tests/Synchronization/: CMakeLists.txt  RunnerTest.cpp
tests/Utilities/: AngleTest.cpp  CMakeLists.txt  EnumMap.cpp  FilterTest.cpp  TypeTraitsTest.cpp
tests/Utilities/DataPresentation/: CMakeLists.txt  DataPresentationTest.cpp
tests/Utilities/IPC/: CMakeLists.txt  IPCTest.cpp
tests/Utilities/Scheduler/: CMakeLists.txt  SchedulerTest.cpp
tests/Utilities/config/: agg1.json  agg2.json  pm_test.json
